second commit || i made the request for axios, catching the json webtoken api

--- a/axios-request/src/style/App.scss
+++ b/axios-request/src/style/App.scss
@@ -1,4 +1,7 @@
-h1{
-    color:black;
+.App{
+    .container{
+        max-width: 1000px;
+        margin:2rem auto;
+        padding: 0 2rem;
+    }
 }
-
