--- a/axios-request/src/style/App.css
+++ b/axios-request/src/style/App.css
@@ -1,3 +1,5 @@
-h1 {
-  color: black;
+.App .container {
+  max-width: 1000px;
+  margin: 2rem auto;
+  padding: 0 2rem;
 }/*# sourceMappingURL=App.css.map */
