--- a/axios-request/src/style/index.css
+++ b/axios-request/src/style/index.css
@@ -1,1 +1,25 @@
-/*# sourceMappingURL=index.css.map */
+* {
+  margin: 0;
+  padding: 0;
+  font-family: "Blinker";
+}
+
+body {
+  background-color: #0e1217;
+  color: #fff;
+}
+body ul {
+  list-style: none;
+}
+body a {
+  text-decoration: none;
+  color: #fff;
+  opacity: 0.7;
+  transition: 0.3s;
+}
+body a:hover {
+  opacity: 1;
+}
+body p {
+  color: #a9abb3;
+}/*# sourceMappingURL=index.css.map */
